tweak the navigation bar some more

--- a/css/custom.css
+++ b/css/custom.css
@@ -21,15 +21,33 @@
 
 @media (max-width: 992px) {
     .navbar .dropdown-menu {
-        padding: none;
         background-color: transparent;
         box-shadow: none;
-        padding: 0 0 1rem 0;
+        padding-bottom: 1rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar .dropdown-menu {
+        border: none;
     }
 }
 
 .mainDropdown {
     width: max-content;
+}
+
+.dropDownCat {
+    padding: 0.5rem 0 0.75rem 1rem;
+    --bs-text-opacity: 1;
+    color: #7B7B7B !important;
+    font-weight: 400 !important;
+}
+
+@media (max-width: 768px) {
+.dropDownCat {
+    display: none;
+}
 }
 
 #mainNav {
@@ -39,24 +57,23 @@
 }
 
 #mainNav .navbar-toggler {
-    font-size: 80%;
-    padding: 0.75rem;
+    font-size: 25px;
     color: var(--bs-gray-900);
-    border: 1px solid var(--bs-gray-900);
+    padding: 0.5rem 0 0.5rem 1.25rem;
+    border: none;
 }
 
 #mainNav .navbar-toggler:focus,
 #mainNav .navbar-toggler:active {
     outline: none;
     color: var(--bs-gray-500);
-    border: 1px solid var(--bs-gray-200);
     background-color: var(--bs-gray-200);
 }
 
 #mainNav .navbar-brand {
     color: var(--bs-gray-900);
     font-weight: 600;
-    padding: 0.9rem 0;
+    padding: 0.5rem 1.5rem 0.5rem 0;
 }
 
 #mainNav .navbar-brand:focus,
@@ -117,7 +134,7 @@
 
     #mainNav .nav-link {
         transition: none;
-        padding: 2rem 1.5rem;
+        padding: 1.15rem 0rem 1.5rem 3rem;
         color: rgb(17, 17, 17);
     }
     
@@ -140,7 +157,6 @@
 
     #mainNav.navbar-shrink .nav-link {
         color: #000;
-        padding: 1.5rem 1.5rem 1.25rem;
         border-bottom: 0.25rem solid transparent;
     }
 
