--- a/css/styles.css
+++ b/css/styles.css
@@ -2173,7 +2173,7 @@ progress {
 
 .hvr-sweep {
   text-decoration: none;
-  padding: 0.5rem 0.5rem .75rem 0;
+  padding: 0.5rem 0;
   font-weight: 600;
   font-size: 1rem;
   color: rgb(17,17,17);
