--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
+  --bs-gray-50: #F5F5F5;
   --bs-gray-100: #E9E9E9;
   --bs-gray-200: #D9D9D9;
   --bs-gray-300: #C4C4C4;
