--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,13 @@
 .playFair {
-    line-height: 47px;
     letter-spacing: 0.25px;
     font-weight: 700;
-    font-family: 'Playfair Display', serif;
-    font-size: 35px;
+    font-family: 'Playfair Display', serif !important;
+    font-size: calc(22px + 1vw);
+    line-height: calc(28px + 1vw);
+}
+
+.lato {
+    font-family: 'Lato', sans-serif !important;
 }
 
 .navbar .dropdown-menu{
@@ -74,12 +78,6 @@
     color: #4D8C61;
 }
 
-.caseStudyVTP .hvr-sweep:active,
-.caseStudyVTP .hvr-sweep:focus,
-.caseStudyVTP .hvr-sweep:hover {
-  opacity: 1;
-}
-
 #mainNav .navbar-nav .nav-item:hover{
     color: fade(#fff, 80%);
     outline: none;
@@ -127,8 +125,8 @@
 .masthead-sub h1 {
     font-family: 'Playfair Display', serif !important;
     font-weight: 700;
-    font-size: 4rem;
-    line-height: 3.75rem;
+    font-size: calc(20px + 3vw);
+    line-height: calc(25px + 3vw);
     letter-spacing: 0.25px;
     background: #141610;
     -webkit-text-fill-color: transparent;
@@ -137,7 +135,7 @@
 }
 
 .caseStudyTD h1 {
-    line-height: 5rem;
+    line-height: calc(37px + 3vw);
 }
 
 .masthead-sub h2 {
@@ -145,7 +143,8 @@
     font-weight: 400 !important;
     line-height: 22px !important;
 }
- 
+
+/* Title fade animations */
 .topFade {
     opacity: 0;
     animation: topFadeOut 1200ms 500ms ease-out forwards;
@@ -164,7 +163,7 @@
 
 .fadeIn-2 {
     opacity: 0;
-    animation: fadeInText 2500ms 500ms ease-out forwards;
+    animation: fadeInText 3500ms 200ms ease-out forwards;
 }
 
 .fadeIn-1{
@@ -190,6 +189,7 @@
     padding: 0 6rem 0 0;
 }
 
+/* leading line following line */
 .leadingLine,
 .followingLine {
     width: 100%;
@@ -255,7 +255,7 @@ div.UXCaseLabel {
   display: flex;
 }
 
-.UXCaseLabel .UXCaseTag {
+.UXCaseLabel p {
   color: #9D9D9D;
   border: 1px solid #9D9D9D;
   font-family: 'Lato', sans-serif;
@@ -285,6 +285,7 @@ div.UXCaseLabel {
 
 .UXCaseButton {
   margin-top: 0rem;
+
 }
 
 .UXCaseTeam {
@@ -307,7 +308,12 @@ div.UXCaseLabel {
 }
 
 .UXCaseSwap p {
-    margin: 0.5rem 0.5rem 0.9rem 0;
+    margin: 0.5rem 0.5rem 0.9rem 0.2rem;
+    font-size: 20px;
+}
+
+.UXCaseSwap .hvr-sweep {
+    font-size: 20px;
 }
 
 /* Fancybox Image Gallery */
@@ -496,9 +502,66 @@ a[data-fancybox] img {
     padding-bottom: 1rem;
 }
 
+/* About Me */
+.aboutMeTitle h1{
+    font-family: 'IBM Plex Serif', sans-serif !important;
+    font-style: normal !important;
+    font-weight: 700 !important;
+    font-size: calc(20px + 2vw) !important;
+    line-height: calc(22px + 2vw);
+    letter-spacing: 0.25px;
+    margin: 0;
+}
+
+.aboutMeIntro,
+.aboutMeXP,
+.aboutMeEnd {
+    margin: 9.375rem auto;
+}
+
+.aboutMeIntro h1 {
+    font-family: 'IBM Plex Serif', sans-serif !important;
+    font-weight: 300;
+    font-size: calc(25px + 4vw);
+    line-height: calc(20px + 4.5vw);
+    letter-spacing: -1px;
+    text-align: right;
+    margin: 0;
+}
+
+.aboutMeIntro h5 {
+    font-size: calc(14px + 0.3vw) !important;
+    line-height: calc(22px + 0.3vw);
+}
+
+.aboutMeTag {
+    flex-direction: row;
+    align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
+.aboutMeTag p{
+    background: #141610;
+    border-radius: 20px;
+    color: white;
+    margin-bottom: 0.15rem;
+    padding: 1px 8px;
+}
+
+.aboutMeEnd h5{
+    font-weight: 400;
+}
+
 /*  Figma Embeb */
 iframe {
     height: 95vh;
+}
+
+/* Social Media footer */
+.socialIcon img {
+    max-height: 25px;
 }
 
 /*  Hero section */
@@ -617,38 +680,13 @@ iframe {
     background-image: url("../assets/img/UX_VTP/UX_VTP_main.png");
 }
 
-.aboutPage .hero-section {
-    background-image: url("../assets/img/About.png");
-}
-
-/* About me */
-.aboutMeTag {
-    font-family: 'IBM Plex Serif', sans-serif !important;
-    font-style: normal !important;
-    font-weight: 700 !important;
-    font-size: 3.4rem;
-    line-height: 74px;
-    letter-spacing: 0.25px;
-}
-  
-.aboutMeBody {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 400;
-    font-size: 1rem;
-    line-height: 1.5rem;
-}
-
-.about-section {
-    padding-top: 10rem;
-    background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
-}
-.about-section p {
-    margin-bottom: 5rem;
+.aboutMe .hero-section {
+    background-image: url("../assets/img/Illustrations/201802_MBTA.png");
 }
 
 /* MAX-WIDTH 1200 */
 @media (max-width:1200px) {
-    .UXCaseTag {
+    .UXCaseLabel p {
         padding: 4px 4px !important;
         margin: 0 4px 0 0 !important;
     }
@@ -656,19 +694,10 @@ iframe {
 
 /* MAX-WIDTH 992 */
 @media (max-width: 992px) {
-    .playFair {
-        font-size: calc(20px + (35 - 20) * ((100vw - 375px) / (1600 - 375)));
-        line-height: 35px;
-    }
     .navbar .dropdown-menu {
         background-color: transparent;
         box-shadow: none;
         padding-bottom: 1rem;
-    }
-    .masthead h1 {
-        font-size: calc(50px + (64 - 50) * ((100vw - 375px) / (1600 - 375)));
-        line-height: 6.5rem;
-        letter-spacing: 0.8rem;
     }
     .hero-section {
         display: block;
@@ -702,16 +731,15 @@ iframe {
         font-size: 1rem;
     }
 
-    .aboutMeTag {
-        font-size: 1.5rem;
-        line-height: 2rem;
-        padding: 0 10px 0 10px;
-    }
     #AFA_Research img {
         padding: 3rem 0.5rem 0 0.5rem;
     }
     #AFA_Ideation img {
         padding: 0 1.5rem 7rem 1.5rem;
+    }
+
+    .aboutMeTitle {
+        padding-top: 6rem;
     }
 }
 
@@ -756,14 +784,17 @@ iframe {
     #AFA_Ideation img {
         padding: 0 0 4.5rem 0;
     }
+    .aboutMeTitle {
+        padding-top: 9rem;
+        padding-left: 1rem;
+    }
+    .aboutMeIntro h1 {
+        text-align: left;
+    }
 }
 
 /* MAX_WIDTH 576 */
 @media (max-width: 576px) {
-    .masthead-sub h1 {
-        font-size: 2rem;
-        line-height: 3rem;
-    }
     .galleryInfo{
         padding: 10px;
         display:block;
@@ -805,6 +836,13 @@ iframe {
     #AFA_Prototyping .galleryMain {
         margin: 0 auto 1rem auto;
         padding: 1.5rem;
+    }
+
+    .aboutMe .hero-section {
+        overflow: hidden;
+    }
+    .aboutMeTitle {
+        padding-top: 2.5rem;
     }
 }
 
